fix(java): get rid of warnings (wrong interger and double instanciation, raw types manipulation in Collections API, deprecated methods)